<resources>
    <string name="app_name">ProjectoFinal</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="repite_la_contrase_a">Repite la contraseña</string>
    <string name="registro">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="generos">Generos</string>
    <string name="favoritos">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_session">Cerrar session</string>
    <string name="buscador">Buscador</string>
    <string name="nombre">Nombre</string>
    <string name="sinopsis_n">Sinopsis:\n</string>
    <string name="fecha_de_estreno">"Fecha de estreno: "</string>
    <string name="idioma_original">"Idioma original: "</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="elenco">Elenco:\n</string>
    <string name="duracion">Duracion: </string>
</resources>