<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bot_home"
        android:title="@string/inicio"
        android:icon="@drawable/home"
        android:fontFamily="@font/marko_one"
        />
    <item
        android:id="@+id/generos2"
        android:icon="@drawable/genders"
        android:title= "@string/generos"
        android:fontFamily="@font/marko_one"/>

    <item
        android:id="@+id/favoritos2"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favoritos"
        android:fontFamily="@font/marko_one"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/account"
        android:title="@string/perfil"
        android:fontFamily="@font/marko_one"
        />
</menu>