<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:ignore="MissingConstraints"

            >



        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/sinopsis_n"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageButton
            android:id="@+id/favOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/favOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/ic_favorite"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_de_estreno"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:text="@string/idioma_original"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            app:srcCompat="@drawable/en" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="247dp"
            android:layout_height="42dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:scaleX="0.50"
            android:scaleY="0.50"
            android:numStars="5"
            android:isIndicator="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
